sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:6: error: not found: value sp
     sp boolean = false
     ^AlgCombSort:15: error: not found: value sp
			sp = false;	
                        ^AlgCombSort:18: error: not found: value sp
	} while(ecart >1 || sp==false  ) 
                            ^